# lost_neupan_nav2_controller

./: CMakeLists.txt  DOCKER_TEST_README.md  Dockerfile  README.md  docker-compose.yml  neupan_controller_plugin.xml  package.xml  setup_neupan_env.sh
config/: nav2_params.yaml
include/neupan_nav2_controller/: neupan_controller.hpp  neupan_controller.hpp.tmp  neupan_controller_updated.hpp
launch/: neupan_nav2_test.launch.py
model/omni_robot_default/: model_5000.pth  results.txt  train_dict.pkl
scripts/: test_neupan_plugin.py  test_plugin_registration.py  verify_plugin.sh
src/: neupan_controller.cpp
test/: CMakeLists.txt  test_python_init  test_python_init.cpp
test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
