<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>neupan_nav2_controller</name>
  <version>1.0.0</version>
  <description>NeuPAN Neural Path Planning controller plugin for Navigation2</description>
  
  <maintainer email="hanrh@connect.hku.hk">Ruihua Han</maintainer>
  <license>GPL-3.0</license>
  
  <url type="website">https://github.com/yourusername/NeuPAN</url>
  <author email="hanrh@connect.hku.hk">Ruihua Han</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>nav2_core</depend>
  <depend>nav2_common</depend>
  <depend>ament_index_cpp</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  
  <!-- Message dependencies -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Python embedding dependencies -->
  <depend>python3-dev</depend>
  
  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/neupan_controller_plugin.xml"/>
  </export>
</package>